--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-    body {
-    background-color: lightblue;
-  }
-    
+body{font-family: "Lato", sans-serif}
+.mySlides {display: none}   
 </style>
 <body>
 
