--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body{font-family: "Lato", sans-serif}
+body {font-family: "Lato", sans-serif}
 .mySlides {display: none}   
 </style>
 <body>
@@ -16,7 +16,7 @@ body{font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card-2">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+    <a href="#home" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="#freshmen" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Freshmen</a>
     <a href="#sophomore" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Sophomore</a>
     <a href="#junior" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Junior</a>
