--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+
 <!DOCTYPE html>
 <html>
-<title>High School Survival Guide</title>
+<title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -8,7 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body {font-family: "Lato", sans-serif}
-.mySlides {display: none}   
+.mySlides {display: none}
 </style>
 <body>
 
@@ -16,29 +17,48 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card-2">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#home" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-    <a href="#freshmen" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Freshmen</a>
-    <a href="#sophomore" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Sophomore</a>
-    <a href="#junior" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Junior</a>
-    <a href="#senior" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Senior</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+    
     <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
+      <button class="w3-padding-large w3-button" title="FRESHMEN">FRESHMEN <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="#" class="w3-bar-item w3-button">Links</a>
-        <a href="#" class="w3-bar-item w3-button">To DO list</a>
-        <a href="#" class="w3-bar-item w3-button">Calender</a>
+        <a href="#" class="w3-bar-item w3-button">Transitioning</a>
+        <a href="#" class="w3-bar-item w3-button">Making New Friends</a>
+        <a href="#" class="w3-bar-item w3-button">Joining CLubs</a>
       </div>
     </div>
-    <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
-  </div>
+     <div class="w3-dropdown-hover w3-hide-small">
+      <button class="w3-padding-large w3-button" title="SOPHOMORE">SOPHOMORE <i class="fa fa-caret-down"></i></button>     
+      <div class="w3-dropdown-content w3-bar-block w3-card-4">
+        <a href="#" class="w3-bar-item w3-button">Finding Yourself</a>
+        <a href="#" class="w3-bar-item w3-button">Picking the Right Classes</a>
+        <a href="#" class="w3-bar-item w3-button">About "Slack Year"</a>
+        <a href="#" class="w3-bar-item w3-button">Cliques</a>
+        </div>
+ </div>
+   <div class="w3-dropdown-hover w3-hide-small">
+      <button class="w3-padding-large w3-button" title="JUNIOR">JUNIOR <i class="fa fa-caret-down"></i></button>     
+      <div class="w3-dropdown-content w3-bar-block w3-card-4">
+        <a href="#" class="w3-bar-item w3-button">ACT/SAT</a>
+        <a href="#" class="w3-bar-item w3-button">Study Habits</a>
+        <a href="#" class="w3-bar-item w3-button">Internships/Summer Programs</a>
+        </div>
 </div>
+ <div class="w3-dropdown-hover w3-hide-small">
+      <button class="w3-padding-large w3-button" title="SENIOR">SENIOR <i class="fa fa-caret-down"></i></button>     
+      <div class="w3-dropdown-content w3-bar-block w3-card-4">
+        <a href="#" class="w3-bar-item w3-button">Common App</a>
+        <a href="#" class="w3-bar-item w3-button">College Essays</a>
+        <a href="#" class="w3-bar-item w3-button">Choosing a College</a>
+        </div>
+        </div>
 
 <!-- Navbar on small screens -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#freshmen" class="w3-bar-item w3-button w3-padding-large">FRESHMEN</a>
-  <a href="#sophomore" class="w3-bar-item w3-button w3-padding-large">SOPHOMORE</a>
-  <a href="#junior" class="w3-bar-item w3-button w3-padding-large">JUNIOR</a>
-  <a href="#senior" class="w3-bar-item w3-button w3-padding-large">SENIOR</a>
+  <a href="#band" class="w3-bar-item w3-button w3-padding-large">BAND</a>
+  <a href="#tour" class="w3-bar-item w3-button w3-padding-large">TOUR</a>
+  <a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
+  <a href="#" class="w3-bar-item w3-button w3-padding-large">MERCH</a>
 </div>
 
 <!-- Page content -->
@@ -67,10 +87,10 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
 
-  <!-- The freshmen Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="freshmen">
-    <h2 class="w3-wide">Freshmen</h2>
-    <p class="w3-opacity"><i>Being a freshmen is hard, but do not worry we can help you through it!!</i></p>
+  <!-- The Band Section -->
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+    <h2 class="w3-wide">THE BAND</h2>
+    <p class="w3-opacity"><i>We love music</i></p>
     <p class="w3-justify">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
       ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
       adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -96,7 +116,7 @@ body {font-family: "Lato", sans-serif}
       <h2 class="w3-wide w3-center">TOUR DATES</h2>
       <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
 
-      <ul class="w3-ul w3-border w3-white w3-text-white">
+      <ul class="w3-ul w3-border w3-white w3-text-grey">
         <li class="w3-padding">September <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
         <li class="w3-padding">October <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
         <li class="w3-padding">November <span class="w3-badge w3-right w3-margin-right">3</span></li>
