--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@ p {
 <body>
   <h1 style="font-family:georgia; text-align:center, text-color:white;">Welcome to Highschool Survival Guide!!</h1>
   <body style="background-color:black;">
-    <p style="font-family:georgia;"> We all know that Highschool is very hard.
-  Their are timees when we just want to give up because we are so lost.
-  I am here to tell you that you are not the only one. Their are so many of us
-  who feel lost in Highschool. Here are HSG(High School Survival Guide) we pride ourselves in understanding
-  the strugglex you face. So we have come up with adivice and information to
-  get you through highschool.</p>
+    <p style="font-family:georgia;"> We all know that high school is very hard.
+  There are timees when we just want to give up because we are so lost, and while the adults may have good intentions, their advice just doesn't seem to work sometimes.
+  We are here to tell you that you are not the only one. There are so many of us who all feel the exact same way,
+  who all feel lost in high school. Here at HSG (High School Survival Guide), we pride ourselves in understanding
+  the struggles you face. So we have come up with adivice and information to
+  get you through high school.</p>
 <!-- this is the slide show -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
