--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card-2">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="sg.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+    <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
 
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="FRESHMEN">FRESHMEN <i class="fa fa-caret-down"></i></button>
@@ -68,38 +68,15 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="home">
     <h2 class="w3-wide">HOME</h2>
     <p class="w3-opacity"><i>Welcome to High School Survival Guide!</i></p>
-    <p class="w3-justify">WELCOME.</p>
-    <div class="w4-row w4-padding-32">
-      <div class="w4-fourth">
-        <p>Berenice</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-      </div>
-      <div class="w4-fourth">
-        <p>Char'lesia</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-      </div>
-      <div class="w4-fourth">
-        <p>Nana</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round" alt="Random Name" style="width:60%">
-      </div>
-      <div class="w4-row w3-padding-32">
-        <div class="w4-fourth">
-          <p>Hope</p>
-          <img src="/w3images/bandmember.jpg" class="w3-round" alt="Random Name" style="width:60%">
-        </div>
-    </div>
-  </div>
-
-
-  <h1 style="font-family:arial; text-align:center, text-color:white;">Welcome to Highschool Survival Guide!!</h1>
-  <body style="background-color:black;">
-    <p style="font-family:arial;"> We all know that high school is very hard.
+    <p class="w3-justify"> We all know that high school is very hard.
   There are timees when we just want to give up because we are so lost, and while the adults may have good intentions, their advice just doesn't seem to work sometimes.
   We are here to tell you that you are not the only one. There are so many of us who all feel the exact same way,
   who all feel lost in high school. Here at HSG (High School Survival Guide), we pride ourselves in understanding
   the struggles you face. So we have come up with adivice and information to
-  get you through high school.</p>
+  get you through high school.</p></p>
     
+
+
 <!-- this is the slide show -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
