--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@ body {font-family: "Lato", sans-serif}
     <h2 class="w3-wide">HOME</h2>
     <p class="w3-opacity"><i>Welcome to High School Survival Guide!</i></p>
     <p class="w3-justify"> We all know that high school is very hard.
-  There are timees when we just want to give up because we are so lost, and while the adults may have good intentions, their advice just doesn't seem to work sometimes.
+  There are times when we just want to give up because we are so lost, and while the adults may have good intentions, their advice just doesn't seem to work sometimes.
   We are here to tell you that you are not the only one. There are so many of us who all feel the exact same way,
   who all feel lost in high school. Here at HSG (High School Survival Guide), we pride ourselves in understanding
-  the struggles you face. So we have come up with adivice and information to
+  the struggles you face. So, we here at Girls Who Code have come up with advice and information to
   get you through high school.</p></p>
     
 
