--- a/index.html
+++ b/index.html
@@ -45,13 +45,37 @@
 
   </div>
 </nav>
+<style>
+h1 {
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+}
 
+p {
+  text-indent: 100px;
+  font-family:arial;
+    text-align: justify;
+    color: #99A3A4
+}
+
+h3 {
+  text-align:left;
+  color:white;
+  letter-spacing: 4px;
+}
+
+
+</style>
+
+  <body style="background-color:black;">
 
 <!-- Page content -->
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
 
   <!-- Home Section -->
+ 
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="home">
     <h2 class="w3-wide">HOME</h2>
     <p class="w3-opacity"><i>Welcome to High School Survival Guide!</i></p>
