--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+
 <!DOCTYPE html>
 <html>
- 
+
 <title>HOME</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,6 +46,7 @@
 
   </div>
 </nav>
+
 <style>
 h1 {
     text-align: center;
@@ -68,24 +70,24 @@ h3 {
 
 </style>
 
-  <body style="background-color:black;">
+ <body style="background-color:black;">
 
 <!-- Page content -->
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
 
   <!-- Home Section -->
- 
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="home">
-    <h2 class="w3-wide">HOME</h2>
-    <p class="w3-opacity"><i>Welcome to High School Survival Guide!</i></p>
-    <p class="w3-justify"> We all know that high school is very hard.
+
+
+ <h3 style="font-family:arial;">Welcome to High School Survival Guide!</h3>
+ <br>
+    <p> We all know that high school is very hard.
   There are times when we just want to give up because we are so lost, and while the adults may have good intentions, their advice just doesn't seem to work sometimes.
   We are here to tell you that you are not the only one. There are so many of us who all feel the exact same way,
   who all feel lost in high school. Here at HSG (High School Survival Guide), we pride ourselves in understanding
   the struggles you face. So, we here at Girls Who Code have come up with advice and information to
-  get you through high school.</p></p>
-    
+  get you through high school.</p>
+
 
 
 <!-- this is the slide show -->
@@ -93,7 +95,7 @@ h3 {
 
 
 
-<h2 class="w3-center">Automatic Slideshow</h2>
+
 
 <div class="w3-content w3-section" style="max-width:500px">
   <img class="mySlides" src="schoolsupplies.jpg" style="width:100%">
@@ -124,3 +126,4 @@ function slides() {
 
 </body>
 </html>
+
