--- a/transitioning.html
+++ b/transitioning.html
@@ -46,29 +46,35 @@
 </nav>
 
 <style>
+
 h1 {
     text-align: center;
     text-transform: uppercase;
     color: white;
+    margin:20px
 }
 p {
-  text-indent: 100px;
   font-family:arial;
     text-align: justify;
-    color: #99A3A4
-}
+    color: #99A3A4;
+    margin-left:200px;
+    margin-right:200px
+    }
+
 h3 {
   text-align:left;
   color:white;
   letter-spacing: 4px;
+  margin:20px
 }
+
 </style>
 
  <body style="background-color:black;">
 
 
-  <h1 style="font-family:arial; text-align:center; text-color:white;">Transitioning from Middle School to High School</h1>
-  <br>
+  <h1 style="font-family:arial; text-color:white;">Transitioning from Middle School to High School</h1>
+  
 
 
     <p style="font-family:arial;">In middle school, you're at the top of the chain, but in high school, you're at the bottom, once again.
@@ -80,8 +86,7 @@ h3 {
       The easiest path to a good transcript is an excellent start;
       if you start high school unafraid and ready to go, you're one step closer to achieving your goals!
       In this section of HSG, we'll help you transition from middle school to high school.</p>
-      <br>
-
+<br>
   <h3 style="font-family:arial">All About Transitioning</h3>
 
   <p style="font-family:arial;">Going to high school while coming out of junior high is exciting yet terrifying to most students.
