--- a/clubs.html
+++ b/clubs.html
@@ -49,28 +49,28 @@
         <head>
         <style>
         h1 {
-            text-align: center;
-            text-transform: uppercase;
-            color: white;
-        }
-
-        p {
-          text-indent: 100px;
-          font-family:arial;
-            text-align: justify;
-            color: #99A3A4
-        }
-
-        h3 {
-          text-align:left;
-          color:white;
-          letter-spacing: 4px;
-        }
-
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+    margin:20px
+}
+p {
+  font-family:arial;
+    text-align: justify;
+    color: #99A3A4;
+    margin-left:200px;
+    margin-right:200px
+    }
+h3 {
+  text-align:left;
+  color:white;
+  letter-spacing: 4px;
+  margin:20px
+}
 
         </style>
 
-          <h1 style="font-family:arial; text-align:center; text-color:white;">Joining Clubs</h1>
+          <h1 style="font-family:arial; text-color:white;">Joining Clubs</h1>
           <br>
         </head>
 
