--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 
@@ -48,23 +49,24 @@
 </nav>
 
 <style>
-h1 {
+ h1 {
     text-align: center;
     text-transform: uppercase;
     color: white;
+    margin:20px
 }
-
 p {
-  text-indent: 100px;
   font-family:arial;
     text-align: justify;
-    color: #99A3A4
-}
-
+    color: #99A3A4;
+    margin-left:200px;
+    margin-right:200px
+    }
 h3 {
   text-align:left;
   color:white;
   letter-spacing: 4px;
+  margin:20px
 }
 
 
@@ -128,4 +130,3 @@ function slides() {
 
 </body>
 </html>
-
