--- a/know.html
+++ b/know.html
@@ -46,25 +46,26 @@
 </nav>
 
 <style>
-h1 {
+
+ h1 {
     text-align: center;
     text-transform: uppercase;
     color: white;
+    margin:20px
 }
-
 p {
-  text-indent: 100px;
   font-family:arial;
     text-align: justify;
-    color: #99A3A4
-}
-
+    color: #99A3A4;
+    margin-left:200px;
+    margin-right:200px
+    }
 h3 {
   text-align:left;
   color:white;
   letter-spacing: 4px;
+  margin:20px
 }
-
 
 </style>
 
@@ -72,7 +73,7 @@ h3 {
 
 
 
-          <h1 style="font-family:arial; text-align:center; text-color:white;">18 Things to Know Before You Go to High School</h1>
+          <h1 style="font-family:arial; text-color:white;">18 Things to Know Before You Go to High School</h1>
           <br>
 
 
