--- a/shapeyourself.html
+++ b/shapeyourself.html
@@ -52,7 +52,7 @@ h3 {
      <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="SOPHOMORE">SOPHOMORE <i class="fa fa-caret-down"></i></button>
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="#" class="w3-bar-item w3-button">Finding Yourself</a>
+        <a href="shapeyourself.html" class="w3-bar-item w3-button">shaping yourself</a>
         <a href="#" class="w3-bar-item w3-button">Picking the Right Classes</a>
         <a href="#" class="w3-bar-item w3-button">About "Slack Year"</a>
         <a href="#" class="w3-bar-item w3-button">Cliques</a>
@@ -95,7 +95,7 @@ h3 {
     Surrounding yourself around older people that has the same interests
     helps you get a upper hand.<br>
 
-  <h3 style="font-family:arial"> Why is it Important to Shap Yourself? </h3>
+  <h3 style="font-family:arial"> Why is it Important to Shape Yourself? </h3>
 
   <p style="font-family:arial;">Sophomore year is important for shaping yourself because
      you are no longer a new face, so people have a perception of who you are
