--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ body {font-family: "Lato", sans-serif}
 </div>
 <!-- Add Google Maps -->
 <div id="googleMap" style="height:400px;" class="w3-grayscale-max"></div>
-<script>
+<<script>
 function myMap() {
   myCenter=new google.maps.LatLng(41.878114, -87.629798);
   var mapOptions= {
@@ -215,7 +215,7 @@ function myMap() {
   };
   var map=new google.maps.Map(document.getElementById("googleMap"),mapOptions);
 
-  var marker = new google.maps.Marker({
+<  var marker = new google.maps.Marker({
     position: myCenter,
   });
   marker.setMap(map);
@@ -227,7 +227,7 @@ To use this code on your website, get a free API key from Google.
 Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 -->
 
-<!-- Footer -->
+<<!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
   <i class="fa fa-facebook-official w3-hover-opacity"></i>
   <i class="fa fa-instagram w3-hover-opacity"></i>
@@ -274,5 +274,5 @@ window.onclick = function(event) {
 }
 </script>
 
-</body>
+</<iframe src="https://calendar.google.com/calendar/embed?src=char'lesia.hughes%40thenobleacademy.org&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>body>
 </html>
