--- a/clubs.html
+++ b/clubs.html
@@ -38,7 +38,7 @@
           </ul>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">SENIOR <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Common App</a></li>
+              <li><a href="commonapp.html">Common App</a></li>
               <li><a href="#">College Essays</a></li>
               <li><a href="#">Picking the Right College</a></li>
             </ul>
