--- a/shapeyourself.html
+++ b/shapeyourself.html
@@ -71,7 +71,7 @@ h3 {
  <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="SENIOR">SENIOR <i class="fa fa-caret-down"></i></button>
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="#" class="w3-bar-item w3-button">Common App</a>
+        <a href="commonapp.html" class="w3-bar-item w3-button">Common App</a>
         <a href="#" class="w3-bar-item w3-button">College Essays</a>
         <a href="#" class="w3-bar-item w3-button">Choosing a College</a>
         </div>
