--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">SOPHOMORE <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Finding Yourself</a></li>
+          <li><a href="shapeyourself.html">Finding Yourself</a></li>
           <li><a href="#">Picking the Right Classes</a></li>
           <li><a href="#">About "Slack Year"</a></li>
           <li><a href="#">Cliques</a></li>
