--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">SENIOR <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="commonapp.html">Common App</a></li>
-              <li><a href="#">College Essays</a></li>
+              <li><a href="essays.html">College Essays</a></li>
               <li><a href="#">Picking the Right College</a></li>
             </ul>
 
