--- a/clubs.html
+++ b/clubs.html
@@ -40,7 +40,7 @@
             <ul class="dropdown-menu">
               <li><a href="commonapp.html">Common App</a></li>
               <li><a href="essays.html">College Essays</a></li>
-              <li><a href="#">Picking the Right College</a></li>
+              <li><a href="picking.html">Picking the Right College</a></li>
             </ul>
 
   </div>
