--- a/shapeyourself.html
+++ b/shapeyourself.html
@@ -70,25 +70,27 @@ h3 {
   <br>
 
 <!--this is the first tab under the 10 grade portion  -->
-    <p style="font-family:arial;">Sophomore year makes you feel out of place,
-    however, it is also the year that you discover who you are. In order to shape yourself into a successful person, you must surround yourself
-    those who aspire to become a better person in life. You must surround yourself with people
-    encourages you and uplifts you. When choosing your friends, ask your self,
-   "Are my friends having a positive or negative influence on me?"; if not then you
-   might want to reevaluate your friend group. It is also best to find a mentor, someone who is older than you. They can give
-    you advice as to how to shape yourself into the best person you can be.
-    Surrounding yourself around older people that has the same interests
-    helps you get a upper hand.<br>
+    <p style="font-family:arial;">Sophomore year can make you feel out of place; after all, you're not the newest, youngest kid on the block, nor are you the upperclassmen preparing for college.
+    This is the year that you really discover who you are; this is also the year where you can try to change yourself into who you want to be without the stress of a completely new environment. 
+	    In order to shape yourself into a successful person, you must surround yourself with those who aspire also to become better people in life. 
+	    You must surround yourself with people who encourage you and uplift you. 
+	    When choosing your friends, ask yourself,
+   "Are my friends having a positive or negative influence on me?"
+	    If they are not being a positive influence on you, then you might want to reevaluate your friend group.
+	    It is also best to find a mentor, that is, someone who is older than you and can give you advice on how to shape yourself into the best person you can be.
+    Surrounding yourself around older people who have the same interests can help you get an upper hand as well, 
+	    as they can give you tried and successful advice.<br>
 
   <h3 style="font-family:arial"> Why is it Important to Shape Yourself? </h3>
 
-  <p style="font-family:arial;">Sophomore year is important for shaping yourself because
-     you are no longer a new face, so people have a perception of who you are
-      whether that’s good or bad you can change that.</p>
-<p style="font-family:arial;"> Sophomore year can weird when it comes down to molding and shaping yourself
+  <p style="font-family:arial;">Sophomore year is important for shaping yourself because you are no longer a new face--
+	  people have a perception of who you are, and that can either be good or bad; this is the year to change before the stress of testing comes next year.</p>
+
+	<p style="font-family:arial;"> However, sophomore year can be weird when it comes down to molding and shaping yourself,
    because you’re not sure if you should start preparing yourself for college or if you should just have fun.
 	The best way to mold and shape yourself is to have freedom while also
-  preparing yourself for colleges by getting great grades and by taking or looking at standardized tests
+  preparing yourself for colleges by getting great grades and by studying for or taking standardized tests like the ACT or SAT.
+		
 </p>
 <!-- this is the slide show -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
