--- a/shapeyourself.html
+++ b/shapeyourself.html
@@ -90,6 +90,9 @@ h3 {
    because you’re not sure if you should start preparing yourself for college or if you should just have fun.
 	The best way to mold and shape yourself is to have freedom while also
   preparing yourself for colleges by getting great grades and by studying for or taking standardized tests like the ACT or SAT.
+		Keep in touch with your morals, and update them if you find that you have changed or would like to; 
+		don't be stubborn and pressure yourself to stay the same, because this is the easiest time to change 
+		into who you want to be! 
 		
 </p>
 <!-- this is the slide show -->
