--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ p {
     margin-right:200px
     }
 h3 {
-  text-align:left;
+  text-align:center;
   color:white;
   letter-spacing: 4px;
   margin:20px
