--- a/clubs.html
+++ b/clubs.html
@@ -32,7 +32,7 @@
         </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">JUNIOR <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">ACT/SAT</a></li>
+            <li><a href="as.html">ACT/SAT</a></li>
             <li><a href="#">Study Habits</a></li>
             <li><a href="#">Internships/Summer Programs</a></li>
           </ul>
