--- a/shapeyourself.html
+++ b/shapeyourself.html
@@ -106,7 +106,7 @@ h3 {
   <img class="mySlides" src="down.jpg" style="width:100%">
   <img class="mySlides" src="together.jpg" style="width:100%">
   <img class="mySlides" src="slump.jpg" style="width:100%">
-  <img class="mySlides" src="advice.jpg" style="width:100%">
+  <img class="mySlides" src="advice1.jpg" style="width:100%">
 </div>
 
 <script>
