--- a/shapeyourself.html
+++ b/shapeyourself.html
@@ -102,7 +102,7 @@ h3 {
 
 
 
-<div class="w3-content w3-section" style="max-width:500px">
+<div class="w3-content w3-section" style="max-width:500px"; "text-align:center";>
   <img class="mySlides" src="down.jpg" style="width:100%">
   <img class="mySlides" src="together.jpg" style="width:100%">
   <img class="mySlides" src="slump.jpg" style="width:100%">
