--- a/shapeyourself.html
+++ b/shapeyourself.html
@@ -95,6 +95,8 @@ h3 {
 		into who you want to be! 
 		
 </p>
+	<br>
+	<br>
 <!-- this is the slide show -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -102,7 +104,7 @@ h3 {
 
 
 
-<div class="w3-content w3-section" style="max-width:500px"; "text-align:center";>
+<div class="w3-content w3-section" style="max-width:500px";>
   <img class="mySlides" src="down.jpg" style="width:100%">
   <img class="mySlides" src="together.jpg" style="width:100%">
   <img class="mySlides" src="slump.jpg" style="width:100%">
