--- a/know.html
+++ b/know.html
@@ -25,7 +25,7 @@
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">SOPHOMORE <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="shapeyourself.html">Finding Yourself Yourself</a></li>
-          <li><a href="#">Picking the Right Classes</a></li>
+          <li><a href="classes.html">Picking the Right Classes</a></li>
           <li><a href="#">About "Slack Year"</a></li>
           <li><a href="#">Cliques</a></li>
         </ul>
