Add bio section

--- a/index.html
+++ b/index.html
@@ -110,6 +110,29 @@ h3 {
   <img class="mySlides" src="College1.jpg" style="width:100%">
   <img class="mySlides" src="future.jpg" style="width:100%">
 </div>
+  
+<h3>About Us:</h3>
+
+<p>BERENICE
+  <br>
+</p>
+
+<p>CHAR'LESIA
+  <br>
+</p>
+
+<p>HOPE:
+  <br>
+  Hello, I'm Hope, a rising junior, and I like to spend my free time reading, writing, singing, dancing, and, most recently, coding!
+  Fun fact: I traveled all the way from Michigan to attend this program!
+  High school can be an incredibly trying time of life,
+  and so I wanted to help create a new website that would have all sorts of advice for each grade level;
+  hopefully, this website can give you some new insights on how best to navigate these crazy years!</p>
+
+<p>NANA:
+  <br>
+</p>
+
 
 <script>
 var myIndex = 0;
