Update bio section

--- a/index.html
+++ b/index.html
@@ -116,10 +116,12 @@ h3 {
 <p>BERENICE
   <br>
 </p>
+  <br>
 
 <p>CHAR'LESIA
   <br>
 </p>
+  <br>
 
 <p>HOPE:
   <br>
@@ -127,11 +129,12 @@ h3 {
   Fun fact: I traveled all the way from Michigan to attend this program!
   High school can be an incredibly trying time of life,
   and so I wanted to help create a new website that would have all sorts of advice for each grade level;
-  hopefully, this website can give you some new insights on how best to navigate these crazy years!</p>
+  hopefully, this website can give you some new insights on how best to navigate these crazy years!</p><br>
 
 <p>NANA:
   <br>
 </p>
+  <br>
 
 
 <script>
