--- a/classes.html
+++ b/classes.html
@@ -69,7 +69,6 @@ h3 {
 
  <body style="background-color:black;">
 
-
   <h1 style="font-family:arial; text-color:white;">Picking the Right Classes</h1>
   <br>
 
@@ -83,6 +82,7 @@ h3 {
    However, if you happen to have a unsatisfactory guidance counselor, you can also go talk with your favorite teacher,
    search for help online, or keep reading on!</p>
 
+     <img src="https://cdn2.hercampus.com/2012/03/30/College_Courses%203_0.jpg" alt="Course Registration Sheet">
 <h3>NOTE:</h3>
 
 <p>Before we jump into picking the right classes,
