--- a/classes.html
+++ b/classes.html
@@ -82,7 +82,7 @@ h3 {
    However, if you happen to have a unsatisfactory guidance counselor, you can also go talk with your favorite teacher,
    search for help online, or keep reading on!</p>
 
-     <img src="https://cdn2.hercampus.com/2012/03/30/College_Courses%203_0.jpg" alt="Course Registration Sheet">
+     <div style="text-align:center;"><img src="https://cdn2.hercampus.com/2012/03/30/College_Courses%203_0.jpg" alt="Course Registration Sheet">
 <h3>NOTE:</h3>
 
 <p>Before we jump into picking the right classes,
