--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ul class="dropdown-menu">
           <li><a href="shapeyourself.html">Finding Yourself</a></li>
           <li><a href="classes.html">Picking the Right Classes</a></li>
-          <li><a href="#">About "Slack Year"</a></li>
+          <li><a href="slackyear.html">About "Slack Year"</a></li>
           <li><a href="#">Cliques</a></li>
         </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">JUNIOR <span class="caret"></span></a>
@@ -111,30 +111,6 @@ h3 {
   <img class="mySlides" src="future.jpg" style="width:100%">
 </div>
   
-<h3>About Us:</h3>
-
-<p>BERENICE
-  <br>
-</p>
-  <br>
-
-<p>CHAR'LESIA
-  <br>
-</p>
-  <br>
-
-<p>HOPE:
-  <br>
-  Hello, I'm Hope, a rising junior, and I like to spend my free time reading, writing, singing, dancing, and, most recently, coding!
-  Fun fact: I traveled all the way from Michigan to attend this program!
-  High school can be an incredibly trying time of life,
-  and so I wanted to help create a new website that would have all sorts of advice for each grade level;
-  hopefully, this website can give you some new insights on how best to navigate these crazy years!</p><br>
-
-<p>NANA:
-  <br>
-</p>
-  <br>
 
 
 <script>
