--- a/clubs.html
+++ b/clubs.html
@@ -27,7 +27,7 @@
         <ul class="dropdown-menu">
           <li><a href="shapeyourself.html">Finding Yourself</a></li>
           <li><a href="classes.html">Picking the Right Classes</a></li>
-          <li><a href="#">About "Slack Year"</a></li>
+          <li><a href="slackyear.html">About "Slack Year"</a></li>
           <li><a href="#">Cliques</a></li>
         </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">JUNIOR <span class="caret"></span></a>
