--- a/slackyr.html
+++ b/slackyr.html
@@ -25,8 +25,8 @@
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">SOPHOMORE <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="shapeyourself.html">Finding Yourself</a></li>
-          <li><a href="slackyr.html">Picking the Right Classes</a></li>
-          <li><a href="#">About "Slack Year"</a></li>
+          <li><a href="classes.html">Picking the Right Classes</a></li>
+          <li><a href="slackyr.html">About "Slack Year"</a></li>
           <li><a href="#">Cliques</a></li>
         </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">JUNIOR <span class="caret"></span></a>
