--- a/shapeyourself.html
+++ b/shapeyourself.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Finding Yourself</title>
+<title>ACTs and SATs</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -27,13 +27,13 @@
           <li><a href="shapeyourself.html">Finding Yourself</a></li>
           <li><a href="classes.html">Picking the Right Classes</a></li>
           <li><a href="slackyr.html">About "Slack Year"</a></li>
-          <li><a href="#">Cliques</a></li>
+          <li><a href="cliques.html">Cliques</a></li>
         </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">JUNIOR <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="as.html">ACT/SAT</a></li>
-            <li><a href="#">Study Habits</a></li>
-            <li><a href="#">Internships/Summer Programs</a></li>
+            <li><a href="study.html">Study Habits</a></li>
+            <li><a href="summer.html">Internships/Summer Programs</a></li>
           </ul>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">SENIOR <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -41,31 +41,40 @@
               <li><a href="essays.html">College Essays</a></li>
               <li><a href="picking.html">Picking the Right College</a></li>
             </ul>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">ABOUT US <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="transitioning.html">Berenice Perez</a></li>
+                <li><a href="meeting.html">Char'lesia Hughes</a></li>
+                <li><a href="clubs.html">Hope Tsai</a></li>
+                <li><a href="know.html">Nana Harrison</a></li>
+              </ul>
 
   </div>
 </nav>
 
 <style>
-h1 {
+ h1 {
     text-align: center;
     text-transform: uppercase;
     color: white;
+    margin:20px
 }
 p {
-    text-indent: 100px;
+  font-family:arial;
     text-align: justify;
-    color: #99A3A4
-}
+    color: #99A3A4;
+    margin-left:200px;
+    margin-right:200px
+    }
 h3 {
-  text-align:left;
+  text-align:center;
   color:white;
   letter-spacing: 4px;
+  margin:20px
 }
 </style>
 
-<body style="background-color:black;">
-
-
+ <body style="background-color:black;">
   <h1 style="font-family:arial; text-align:center; text-color:white;">Shaping Yourself</h1>
   <br>
 
