--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             </ul>
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">ABOUT US <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="transitioning.html">Berenice Perez</a></li>
-                <li><a href="meeting.html">Char'lesia Hughes</a></li>
-                <li><a href="clubs.html">Hope Tsai</a></li>
-                <li><a href="know.html">Nana Harrison</a></li>
+                <li><a href="bp.html">Berenice Perez</a></li>
+                <li><a href="ch.html">Char'lesia Hughes</a></li>
+                <li><a href="ht.html">Hope Tsai</a></li>
+                <li><a href="nh.html">Nana Harrison</a></li>
               </ul>
 
   </div>
