--- a/ht.html
+++ b/ht.html
@@ -78,7 +78,7 @@ h3 {
 
 <h1>HOPE TSAI</h1>
 
-<div style="text-align:center;"<img src="hope.JPG">
+    <div style="text-align:center;"><img src="hope.JPG" alt="Hope Tsai">
 <p>Hello, I’m Hope, a rising junior,
   and I like to spend my free time reading, writing, singing, dancing, and, most recently, coding!
   <b>Fun fact:</b> I traveled all the way from Michigan to attend this program here in Chicago!
