--- a/ht.html
+++ b/ht.html
@@ -77,8 +77,14 @@ h3 {
  <body style="background-color:black;">
 
 <h1>HOPE TSAI</h1>
+   
+   img.resize {
+  max-width:50%;
+  max-height:50%;
+}
 
-    <div style="text-align:center;"><img src="hope.JPG" alt="Hope Tsai">
+    <div style="text-align:center;"><img class="resize" src="hope.JPG" alt="Hope Tsai">
+      
 <p>Hello, I’m Hope, a rising junior,
   and I like to spend my free time reading, writing, singing, dancing, and, most recently, coding!
   <b>Fun fact:</b> I traveled all the way from Michigan to attend this program here in Chicago!
