--- a/essays.html
+++ b/essays.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-<title>ACTs and SATs</title>
+<title>College Application Essays</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
