--- a/commonapp.html
+++ b/commonapp.html
@@ -143,6 +143,17 @@ h3 {
 
   <p>When you are writing your essay, keep the word count in mind;
     it's helpful to plan out your essay beforehand, so that you know you are getting all of the important information in.</p>
+   
+   <h3>Resources</h3>
+   <p><a href="http://www.commonapp.org/">Official Common Application Website</p></a>
+  <p><a href="https://www.usnews.com/education/blogs/college-admissions-playbook/articles/2016-07-25/college-students-share-common-app-tips-tactics">Advice from College Students</p></a>
+  <p><a href="https://www.khanacademy.org/college-careers-more/college-admissions/applying-to-college/college-application-process/a/filling-out-the-college-application-common-application-walkthrough">Common App Walkthrough from Khan Academy</p></a>
+  <p><a href="http://www.collegedata.com/cs/content/content_getinarticle_tmpl.jhtml?articleId=10052">Get to Know the Common App</p></a>
+<p><a href="https://www.commonapp.org/virtual-counselor/ten-college-application-tips">Ten College Application Tips</p></a>
+<p><a href="http://www.commonapp.org/whats-appening/college-counseling/college-application-tips-common-app-staff">College Application Tips from Common App Staff</p></a>
+<p><a href="https://www.noodle.com/topics/common-app">Common App Advice and Help</p></a>
+<p><a href="https://www.princetonreview.com/college-advice/are-you-ready-for-the-common-app">How to Start Your Common Application</p></a>
+<p><a href="https://admissions.yale.edu/advice-putting-together-your-application">Putting Together Your Application</p></a>
 
 
 
