--- a/essays.html
+++ b/essays.html
@@ -134,3 +134,15 @@ h3 {
   but make sure the words are still all yours!
   Remember, these people read through essays and applications as their jobs--
   they know when someone is being fake or having someone else write the essay for them.</p>
+   
+   <h3>Resources</h3>
+   <p><a href="https://www.princetonreview.com/college-advice/college-essay">Crafting an Unforgettable College Essay</p></a>
+  <p><a href="https://bigfuture.collegeboard.org/get-in/essays/8-tips-for-crafting-your-best-college-essay">8 Tips for Crafting Your Best College Essay</a></p>
+  <p><a href="https://www.usnews.com/education/best-colleges/articles/2017-05-25/top-college-officials-share-notes-on-great-application-essays">Top College Officials Share Notes on Great Application Essays</p></a>
+  <p><a href="http://www.collegexpress.com/articles-and-advice/admission/articles/college-applications/writing-college-application-essay/">How to Write a Great College Application Essay</p></a>
+  <p><a href="https://www.khanacademy.org/college-careers-more/college-admissions/applying-to-college/admissions-essays/a/writing-tips-and-techniques-for-your-college-essay">Writing Tips and Techniques for Your College Essay</p></a>
+<p><a href="http://inlikeme.com/19-common-application-essay-mistakes-and-how-to-avoid-them/">19 Common Application Essay Mistakes and How to Avoid Them</p></a>
+<p><a href="http://www.collegedata.com/cs/content/content_getinarticle_tmpl.jhtml?articleId=10057">Ten Tips to Improve Your Essay</p></a>
+   
+  </body>
+  </html>
