--- a/picking.html
+++ b/picking.html
@@ -149,5 +149,18 @@ h3 {
   so just choose what will work best for you and work hard while you’re there.
   Good luck!</p>
 
+   
+   <h3>Resources</h3>
+   
+   <p><a href="https://www.usnews.com/education/best-colleges/slideshows/10-steps-to-picking-the-right-school">Ten Tips to Picking the Right School</a></p>
+   <p><a href="https://bigfuture.collegeboard.org/find-colleges/how-find-your-college-fit">Finding Your College Fit</p></a>
+  <p><a href="https://www.fastweb.com/college-search/articles/top-15-mistakes-to-avoid-in-choosing-a-college">Top 15 Mistakes to Avoid in Choosing a College</p></a>
+  <p><a href="http://www.bestcollegevalues.org/8-steps-for-choosing-the-right-college/">8 Steps for Choosing the Right College</p></a>
+  <p><a href="http://www.supercollege.com/guide/guide.cfm?t_id=1&g_id=5&step=1">How to Choose the RIght College</p></a>
+<p><a href="http://www.wikihow.com/Choose-a-College">4 Ways to Choose a College</p></a>
+<p><a href="http://www.collegexpress.com/articles-and-advice/admission/articles/find-college/finding-right-college-match/">How to Find Your Perfect College Match</p></a>
+<p><a href="https://www.nerdwallet.com/blog/finance/picking-right-college-avoid-student-debt/">Pick the Right College to Avoid Student Debt</p></a>
+<p><a href="https://www.credible.com/blog/how-to-pick-the-right-college-and-find-out-what-it-will-really-cost/">How to Pick the Right College and Find Out What It Will Really Cost</p></a>
+   
 </body>
 </html>
