--- a/study.html
+++ b/study.html
@@ -88,14 +88,14 @@ Study habits can carry on from high school to college and so on. </p>
 
 <p>2. Repetition--try reciting something several times; this increases the chances of you remembering the material you studied.</p>
 
-<p>Good Lighting--good lighting helps you pay attention more to your work,
+<p>3. Good Lighting--good lighting helps you pay attention more to your work,
 and it keeps your eyes from straining so you don't get headaches that would harm you or your studying.</p>
 
-<p>Quiet Space--this will allow your brain to retain and actually understand the information better. We know that sometimes we think listening to music will help us stay focused,
+<p>4. Quiet Space--this will allow your brain to retain and actually understand the information better. We know that sometimes we think listening to music will help us stay focused,
 but it actually makes you lose the information because your focus is on the music. Take breaks instead; try one five-minute break every thirty minutes.
 Soon, you will develop your own personal system that will keep you focused on your work when you have to.</p>
 
-<p>Do Not Procrastinate--waiting until the last minute to study is a bad idea,
+<p>5. Do Not Procrastinate--waiting until the last minute to study is a bad idea,
 especially when you decide to study right before you go to bed,
 because it makes you less likely to remember anything that you studied.
 In addition, studying before you go to to bed is a horrible idea; you're most likely too tired to remember anything.
