--- a/classes.html
+++ b/classes.html
@@ -150,3 +150,16 @@ h3 {
   colleges will not be impressed with a transcript full of AP courses if the transcript is full of C’ss,
   nor will they be impressed with a transcript full of A’s if you’re only taking easy classes.
   Find the right balance between doable and challenging. Good luck!</p>
+       
+       <br>
+       
+       <h3>Resources</h3>
+       <p><a href="http://internationalcollegecounselors.com/9-tips-for-choosing-the-right-high-school-classes/">9 Tips for Choosing the Right High School Classes</p></a>
+   <p><a href="https://admissions.yale.edu/advice-selecting-high-school-courses">Advice on Selecting High School Courses</p></a>
+  <p><a href="https://bigfuture.collegeboard.org/get-in/your-high-school-record/how-to-choose-high-school-electives">How to Choose High School Electives</a></p>
+  <p><a href="https://blog.ivywise.com/blog-0/5-tips-for-choosing-high-school-classes">5 Tips for Choosing High School Classes</p></a>
+  <p><a href="https://www.khanacademy.org/college-careers-more/college-admissions/making-high-school-count/high-school-classes/a/selecting-high-school-classes-in-preparation-for-college">Selecting High School Classes in Preparation for College</p></a>
+  <p><a href="https://www.commonapp.org/virtual-counselor/how-do-i-choose-my-high-school-courses">How Do I Choose My High School Courses?</p></a>
+<p><a href="https://www.princetonreview.com/college-advice/choosing-high-school-classes">What High School Classes Do Colleges Look For?</p></a>
+<p><a href="http://blog.prepscholar.com/which-high-school-electives-should-you-take">Which High School Electives Should You Take</p></a>
+<p><a href="https://www.hercampus.com/high-school/how-choose-high-school-classes-next-year">How to Choose High School Classes For Next Year</p></a>
