--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ h3 {
 
 
 
- <div style="text-align:center;"><div class="w3-content w3-section" style="max-width:500px">
+ <div class="w3-content w3-section" style="max-width:500px;" "text-align:center">
   <img class="mySlides" src="schoolsupplies.jpg" style="width:100%">
   <img class="mySlides" src="9gradenation.jpg" style="width:100%">
   <img class="mySlides" src="grade-9.jpg" style="width:100%">
