--- a/bp.html
+++ b/bp.html
@@ -77,6 +77,9 @@ h3 {
  <body style="background-color:black;">
 
 <h1>BERENICE PEREZ</h1>
+   
+   <div style="text-align:center;"><img src="profile.jpeg" alt="Berenice Perez" height="480" width="640">
+     
 <p>My name is Berenice Perez.
   I go to De La Salle Institute, and I am a rising junior.
   I;m part of the National Honors Society, and have all honors classes.
