--- a/as.html
+++ b/as.html
@@ -79,7 +79,7 @@ h3 {
   <h1 style="font-family:arial; text-color:white;">On the ACT and SAT</h1>
   <br>
 
-<p>Junior year is here and it's time to take the ACT or SAT.
+<p><font size="3">Junior year is here and it's time to take the ACT or SAT.
 The ACTs and SATs are exams you have to take to get into a college;
 most colleges require one of these test scores as a part of the application,
 but you don't have to take both--
@@ -88,7 +88,7 @@ This exam can determine what kind of college/university you attend,
 how much money you can get off your tuition (if you earn a high score),
 and what kind of classes you will be taking the following year. </p>
 
-<p>In order to get a good score on these tests,
+<p><font size="3">In order to get a good score on these tests,
 you will have to practice.
 Everyone wants an excellent score, but it all depends on you--
 you have to work and put in the effort;
@@ -96,7 +96,7 @@ you will need to practice as much as you can because practice makes perfect.
 We would highly encourage you to use any SAT or ACT practice materials that your school can offer;
 some libraries have the test prep books from Princeton Review or Barron's; there are also numerous websites online.</p>
 
- <p>We would also suggest finding other resources like ACT or SAT programs that will help you practice and
+ <p><font size="3">We would also suggest finding other resources like ACT or SAT programs that will help you practice and
  teach you something if you don't know how to do it.
  These tests are designed to be tricky, and with practice, you can start seeing what the exam writers want to test you on and
  how to go about those questions.
@@ -108,7 +108,7 @@ some libraries have the test prep books from Princeton Review or Barron's; there
  In addition, if you have taken the SAT before, you can link your CollegeBoard account to Khan Academy,
  and they will devise a study plan complete with exams and sets of practice questions that are tailored to your needs.</p>
 
-<p>Start practicing as soon as you can! Here are some websites you can visit:</p>
+<p><font size="3">Start practicing as soon as you can! Here are some websites you can visit:</p>
 
 <p><a href="https://www.powerscore.com/sat/help/content_practice_tests.cfm#official-act">PowerScore</a></p>
 <p><a href="https://www.khanacademy.org/sat">Khan Academy</a></p>
